// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  display: inline-block;
}

.c0 {
  display: inline-block;
  padding: 10px 1em;
  font-weight: normal;
  background-color: #ea232d;
  border: none;
  color: #fff;
}

<Link
  className="c0"
  to="internal-link-slug"
>
  <span
    className="c1"
  >
    Button text
  </span>
</Link>
`;

exports[`renders correctly 2`] = `
.c3 {
  display: inline-block;
}

.c2 {
  display: inline-block;
  padding: 10px 1em;
  font-weight: normal;
  background-color: transparent;
  border: 1px solid #fff;
  color: #fff;
}

.c1 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c0 {
  padding: 20px 0;
  margin-bottom: 40px;
}

<section
  className="c0"
>
  <div
    className="c1"
  >
    <h3
      className=""
    >
      mock header text
    </h3>
    <a
      className="c2"
      href="http://example.com"
    >
      <span
        className="c3"
      >
        Button text
      </span>
    </a>
  </div>
</section>
`;
